<resources>
    <!-- Accessibility -->
    <string name="desc_product_image">Image product</string>
    <string name="desc_delete_product">Delete product</string>
    <string name="desc_empty_image">Image cookie empty list</string>
    <string name="desc_error_image">Image error</string>
    <string name="desc_loading_image">Image loading</string>

    <!-- ProductsFragment -->
    <string name="products_screen_title">Products</string>
    <string name="products_fab_add_product">Add product</string>
    <string name="delete_title">Are you sure you want to delete this product?</string>
    <string name="delete_confirm">Confirm</string>
    <string name="delete_cancel">Cancel</string>
    <string name="products_error_access_denied">Access denied! Check the Firestore rules.</string>
    <string name="products_error_access_unknown">Ops.. something went wrong.</string>
    <string name="loading_text">Loading products…</string>
    <string name="empty_text">The product list is empty</string>

    <!-- SaveProductFragment -->
    <string name="save_product_screen_title">Save Product</string>
    <string name="save_product_field_description_hint">Description</string>
    <string name="save_product_field_price_hint">Price</string>
    <string name="save_product_field_error">Mandatory field</string>
    <string name="save_product_button_save_product">Save</string>

</resources>
