<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.products.ProductsFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewFlipper
            android:id="@+id/flipper_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_loading"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/desc_loading_image"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_loading"
                    app:tint="#66000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_text"
                    android:textColor="#66000000"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/image_loading"
                    app:layout_constraintStart_toStartOf="@+id/image_loading"
                    app:layout_constraintTop_toBottomOf="@+id/image_loading" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_error"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/desc_error_image"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_error"
                    app:tint="?attr/colorError" />

                <TextView
                    android:id="@+id/text_error"
                    style="@style/Text.Error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@+id/image_error"
                    app:layout_constraintStart_toStartOf="@+id/image_error"
                    app:layout_constraintTop_toBottomOf="@+id/image_error"
                    tools:text="@tools:sample/lorem" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_empty"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/desc_empty_image"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_empty"
                    app:tint="#66000000" />

                <TextView
                    android:id="@+id/text_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_text"
                    android:textColor="#66000000"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/image_empty"
                    app:layout_constraintStart_toStartOf="@+id/image_empty"
                    app:layout_constraintTop_toBottomOf="@+id/image_empty" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_products"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:scrollbars="none"
                    android:splitMotionEvents="false"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:spanCount="2"
                    tools:listitem="@layout/item_product" />

                <FrameLayout
                    android:id="@+id/progress_container"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="#4D000000"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible">

                    <ProgressBar
                        style="?attr/indeterminateProgressStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ViewFlipper>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/products_fab_add_product"
        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        app:tint="#fff" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
